--- a/package.json
+++ b/package.json
@@ -261,7 +261,7 @@
   "scripts": {
     "check": "eslint --ext .js,.jsx,.tsx,.ts . --quiet --cache",
     "fix": "eslint --ext .js,.jsx,.tsx,.ts . --quiet --fix --cache",
-    "build": "cross-env NODE_ENV=production webpack",
+    "build": "webpack --mode development",
     "run": "webpack --progress --watch",
     "dev-server": "webpack serve --mode development",
     "test": "cross-env TZ=Etc/UTC jest --maxWorkers=50%",
